--- a/palvelut.html
+++ b/palvelut.html
@@ -12,120 +12,120 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row py-4 justify-content-center" id="navbar">
-      <div class="col-2 my-auto navLinks"><a href="./index.html">Etusivu</a></div>
-      <div class="col-2 my-auto navLinks"><a href="./palvelut.html">Palvelut</a></div>
-      <div class="col-2 my-auto navLinks"><a href="./testaus.html">Värien testaus</a></div>
-      <div class="col-2 my-auto navLinks"><a href="./galleria.html">Galleria</a></div>
-      <div class="col-2 my-auto navLinks"><a href="./yhteystiedot.html">Yhteystiedot</a></div>
+  <!-- tässä navigointipalkki -->
+  <div class="container-fluid position-sticky" id="navbarDiv">
+    <div class="row py-4 justify-content-center " id="navbar">
+      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
+      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a></div>
+      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./testaus.html">Värien testaus</a>
+      </div>
+      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./galleria.html">Galleria</a></div>
+      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./yhteystiedot.html">Yhteystiedot</a>
+      </div>
     </div>
-    <div class="row justify-content-center">
-      <h1 class="py-4">MEILTÄ, AMMATTITAIDOLLA</h1>
-    </div>
-    <div class="row">
-      <div class="col-12 col-sm-6 p-5 d-flex-column justify-content-center">
-        <h2>Maalauspalvelut</h2>
-        <p class="palvelutP">Ut quis Lorem mollit ullamco et. Enim eiusmod ullamco ex do occaecat ad aliqua incididunt
-          aliqua
-          anim. Ea amet nulla do elit proident deserunt elit ullamco excepteur.
+  </div>
 
-          Ullamco quis anim anim voluptate. In elit laborum et sint laborum consectetur eu magna esse. Laboris
-          enim occaecat commodo nisi laboris. Reprehenderit ea aliqua excepteur consequat.</p> <br>
+  <!-- tästä alkaa sivun sisältö -->
+  <div class="container-fluid position-relative" id="middleContainerDiv"></div>
+  <!-- ensimmäisellä rivillä vain otsikko -->
+   <!-- tässä tehtävänannon mukainen fonttikoko, olisin itse halunnut muotoilla ihan eri tavalla (eri fontti, isompi koko) -->
+    <div class="row justify-content-center">
+      <h1 class="mt-5 py-4">MEILTÄ, AMMATTITAIDOLLA</h1>
+    </div>
+
+    <!-- toisella rivillä maalauspalvelutiedot ja kuva -->
+    <div class="row p-4 justify-content-center">
+      <div class="col-12 col-sm-5 p-5 d-flex-column justify-content-center border-top">
+        <!-- h2 fonttikoko on minusta liian pieni. On nyt tehtävänannon mukainen mutta minusta ei ole hyvä/sopusuhtainen sivuun nähden. Olisin muotoillut eri tavalla jos tehtävänanto olisi antanut myöten.  -->
+        <h2 class="palvelutHeader">Maalauspalvelut</h2>
+        <p class="palvelutP">Ut quis Lorem mollit ullamco et. Enim eiusmod ullamco ex do occaecat ad aliqua incididunt
+        aliqua
+        anim. Ea amet nulla do elit proident deserunt elit ullamco excepteur.
+
+        Ullamco quis anim anim voluptate. In elit laborum et sint laborum consectetur eu magna esse. Laboris
+        enim occaecat commodo nisi laboris. Reprehenderit ea aliqua excepteur consequat.</p> <br>
 
         <p class="palvelutP">Sunt eiusmod tempor sit veniam reprehenderit mollit in ipsum occaecat elit incididunt
-          laborum
-          incididunt ad. Amet sunt ipsum sint sint commodo Lorem nisi aliquip ad. Adipisicing officia veniam
-          veniam minim magna mollit voluptate dolore id nostrud aute eu non. Eu irure voluptate dolor id magna
-          commodo Lorem. Cupidatat voluptate in id pariatur adipisicing est aliqua dolore Lorem proident.
+        laborum
+        incididunt ad. Amet sunt ipsum sint sint commodo Lorem nisi aliquip ad. Adipisicing officia veniam
+        veniam minim magna mollit voluptate dolore id nostrud aute eu non. Eu irure voluptate dolor id magna
+        commodo Lorem. Cupidatat voluptate in id pariatur adipisicing est aliqua dolore Lorem proident.
 
-          Id velit tempor fugiat tempor commodo magna irure culpa deserunt do nisi ipsum adipisicing mollit.
-          Do pariatur voluptate non est. Et occaecat exercitation cupidatat aute anim amet. Eu voluptate elit
-          id cillum occaecat proident nisi commodo sit enim culpa ullamco.
-
-          Ullamco commodo reprehenderit anim consectetur aute tempor qui nisi tempor exercitation sint. Aute
-          labore dolor mollit tempor. Culpa et non incididunt ipsum elit ullamco laboris nostrud quis minim
-          nostrud aliqua.</p>
+        Id velit tempor fugiat tempor commodo magna irure culpa deserunt do nisi ipsum adipisicing mollit.
+        Do pariatur voluptate non est. Et occaecat exercitation cupidatat aute anim amet. Eu voluptate elit
+        id cillum occaecat proident nisi commodo sit enim culpa ullamco.</p>
       </div>
-      <div class="col-12 col-sm-6 p-5 d-flex-column justify-content-center" id="palvelutImgDiv">
+      <div class="col-12 col-sm-5 p-5 d-flex-column justify-content-center border-top" id="palvelutImgDiv">
         <img class="img-fluid" id="palvelutImg" src="./asssets/pexels-cassidy-muir-1079619-2065971.jpg" />
       </div>
     </div>
-    <div class="row">
-      <div class="col-12 col-sm-6 p-5 d-flex-column justify-content-center" id="palvelutImgDiv">
+
+    <div class="row p-4 justify-content-center">
+      <div class="col-12 col-sm-5 p-5 d-flex-column justify-content-center border-top" id="palvelutImgDiv">
         <img class="img-fluid" src="./asssets/pexels-curt-hubner-39375428-20806624.jpg" />
       </div>
-      <div class="col-12 col-sm-6 p-4 p-5 d-flex-column justify-content-center">
-        <h2>Tapetointipalvelut</h2>
+      <div class="col-12 col-sm-5 p-4 p-5 d-flex-column justify-content-center border-top">
+        <h2 class="palvelutHeader">Tapetointipalvelut</h2>
         <p class="palvelutP">Sunt eiusmod tempor sit veniam reprehenderit mollit in ipsum occaecat elit incididunt
-          laborum
-          incididunt ad. Amet sunt ipsum sint sint commodo Lorem nisi aliquip ad. Adipisicing officia veniam
-          veniam minim magna mollit voluptate dolore id nostrud aute eu non. Eu irure voluptate dolor id magna
-          commodo Lorem. Cupidatat voluptate in id pariatur adipisicing est aliqua dolore Lorem proident.</p> </br>
+        laborum
+        incididunt ad. Amet sunt ipsum sint sint commodo Lorem nisi aliquip ad. Adipisicing officia veniam
+        veniam minim magna mollit voluptate dolore id nostrud aute eu non. Eu irure voluptate dolor id magna
+        commodo Lorem. Cupidatat voluptate in id pariatur adipisicing est aliqua dolore Lorem proident.</p> </br>
 
         <p class="palvelutP">Id velit tempor fugiat tempor commodo magna irure culpa deserunt do nisi ipsum adipisicing
-          mollit.
-          Do pariatur voluptate non est. Et occaecat exercitation cupidatat aute anim amet. Eu voluptate elit
-          id cillum occaecat proident nisi commodo sit enim culpa ullamco.
+        mollit.
+        Do pariatur voluptate non est. Et occaecat exercitation cupidatat aute anim amet. Eu voluptate elit
+        id cillum occaecat proident nisi commodo sit enim culpa ullamco.
 
-          Ullamco commodo reprehenderit anim consectetur aute tempor qui nisi tempor exercitation sint. Aute
-          labore dolor mollit tempor. Culpa et non incididunt ipsum elit ullamco laboris nostrud quis minim
-          nostrud aliqua.</p>
+        Ullamco commodo reprehenderit anim consectetur aute tempor qui nisi tempor exercitation sint. Aute
+        labore dolor mollit tempor. Culpa et non incididunt ipsum elit ullamco laboris nostrud quis minim
+        nostrud aliqua.</p>
       </div>
     </div>
+  </div>
 
-    <!-- footer alkaa -->
-    <footer class="footer">
-      <div class="container-fluid p-4" id="footer">
-        <div class="row">
-          <div class="col-lg-4 col-md-12">
-            <h5>Kotkantien maalaus ja tapetointi</h5>
-            <div>
-              <!-- <p><b>Kotkantien maalaus ja tapetonti</b></p> -->
-              <p>Kotkantie 3</p>
-              <p>90100 Oulu</p>
-              <div><i class="bi bi-telephone"></i> 044 999 888 99</div>
-              <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
-            </div>
-            <!-- <p>
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                      molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-                      voluptatem veniam, est atque cumque eum delectus sint!
-                    </p> -->
+    <!-- tästä alkaa footer -->
+    <div class="container-fluid px-0 " id="footerContainer">
+      <footer class="footer position-absolute" id="footer">
+
+          <div class="row p-4">
+              <div class="col-lg-4 col-md-12">
+                  <h5>Kotkantien maalaus ja tapetointi</h5>
+                  <div>
+                      <p>Kotkantie 3</p>
+                      <p>90100 Oulu</p>
+                      <div><i class="bi bi-telephone"></i> 044 999 888 99</div>
+                      <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6">
+                  <h5>löydät meidät somesta</h5>
+                  <ul class="list-unstyled">
+                      <li class="mb-2">
+                          <a href=""><i class="bi bi-instagram"></i> Instagram</a>
+                      </li>
+                      <li class="mb-2">
+                          <a href=""><i class="bi bi-youtube"></i> YouTube</a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
+                  <h5>olemme avoinna</h5>
+                  <table class="table">
+                      <tbody>
+                          <tr>
+                              <td>Ma - Pe:</td>
+                              <td>9:00 - 18:00</td>
+                          </tr>
+                          <tr>
+                              <td>La - Su:</td>
+                              <td>Sopimuksen mukaan</td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
           </div>
-          <div class="col-lg-4 col-md-6">
-            <h5>löydät meidät somesta</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2">
-                <a href="" style="color: #4f4f4f;"><i class="bi bi-instagram"></i> Instagram</a>
-              </li>
-              <li class="mb-2">
-                <a href="" style="color: #4f4f4f;"><i class="bi bi-youtube"></i> YouTube</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <h5>olemme avoinna</h5>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>Ma - Pe:</td>
-                  <td>9:00 - 18:00</td>
-                </tr>
-                <tr>
-                  <td>La - Su:</td>
-                  <td>Sopimuksen mukaan</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-      <!-- <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                © 2020 Copyright:
-                <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-              </div> -->
-    </footer>
+      </footer>
   </div>
 
 
