--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
             </div>
             <div class="col-2 my-auto navLinks d-flex justify-content-center"><a
                     href="./yhteystiedot.html">Yhteystiedot</a></div>
+            </div>
+
         </div>
     </div>
+    <div class="hamburgerDiv container-fluid">
+        <button id="hamburger"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M4 6l16 0"></path> <path d="M4 12l16 0"></path> <path d="M4 18l16 0"></path> </svg> </button>
+        </div>
 
     <!-- tässä etusivun kuva ja yrityksen nimi -->
     <div class="container-fluid position-relative" id="middleContainerDiv">
@@ -39,6 +44,7 @@
                 <div class="position-absolute" id="headerTextDiv">
                     <!-- tämän h1 otsikon koko eri kuin tehtävänannossa, etusivu olisi näyttänyt tosi kököltä liian pienen tekstin kanssa, eli otin tietoisen irtioton tehtävänannosta tässä kohtaa. -->
                     <h1 id="headerText">Kotkantien maalaus ja tapetointi</h1>
+                    <h3 id="headerSlogan">Ammattitaidolla, asiakasta kuunnellen</h3>
                 </div>
             </div>
         </div>
@@ -96,6 +102,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <script src="./js/navbar.js"></script>
 </body>
 
 </html>
