--- a/testaus.html
+++ b/testaus.html
@@ -120,7 +120,7 @@
                     Brown Granite
                 </div>
                 <div class="col-4 p-2 d-flex align-items-center">
-                    <button class="btn btn-secondary my-4" id="firstColorClearBtn">Tyhjennä</button>
+                    <button class="btn btn-outline-secondary my-4" id="firstColorClearBtn">Tyhjennä</button>
                 </div>
             </div>
         </div>
@@ -196,7 +196,7 @@
                     Brown Granite
                 </div>
                 <div class="col-4 p-2 d-flex align-items-center">
-                    <button class="btn btn-secondary my-4" id="secondColorClearBtn">Tyhjennä</button>
+                    <button class="btn btn-outline-secondary my-4" id="secondColorClearBtn">Tyhjennä</button>
                 </div>
             </div>
         </div>
