--- a/galleria.html
+++ b/galleria.html
@@ -5,39 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/galleria.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Kuvagalleria</title>
+    <link rel="stylesheet" type="text/css" href="./css/galleria.css">
+    <title>Galleria</title>
 </head>
 
 <body>
-  <!-- tässä navigointipalkki -->
-  <div class="container-fluid position-sticky" id="navbarDiv">
-    <div class="row py-4 justify-content-center " id="navbar">
-      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
-      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a></div>
-      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./testaus.html">Värien testaus</a>
+    <!-- tässä navigointipalkki -->
+    <div class="container-fluid position-sticky" id="navbarDiv">
+      <div class="row py-4 justify-content-center " id="navbar">
+          <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
+          <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a>
+          </div>
+          <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./testaus.html">Värien
+                  testaus</a></div>
+          <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./galleria.html">Galleria</a>
+          </div>
+          <div class="col-2 my-auto navLinks d-flex justify-content-center"><a
+                  href="./yhteystiedot.html">Yhteystiedot</a></div>
       </div>
-      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./galleria.html">Galleria</a></div>
-      <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./yhteystiedot.html">Yhteystiedot</a>
-      </div>
-    </div>
+
+  </div>
+  </div>
+  <div class="hamburgerDiv container-fluid">
+      <button id="hamburger"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24"
+              stroke-width="2">
+              <path d="M4 6l16 0"></path>
+              <path d="M4 12l16 0"></path>
+              <path d="M4 18l16 0"></path>
+          </svg> </button>
   </div>
 
   <!-- sivun banneri, h1 fonttikoko tietoisesti laitettu isommaksi kuin tehtävänannossa -->
   <div class="container-fluid position-relative" id="middleContainerDiv">
     <div class="row my-4 justify-content-center">
-      <div class="position-relative" id="palvelutHeaderImgDiv">
-        <img class="img-fluid mx-auto" id="palvelutHeaderImg"
+      <div class="position-relative" id="galleriaHeaderImgDiv">
+        <img class="img-fluid mx-auto" id="galleriaHeaderImg"
           src="./asssets/pexels-pixabay-260046_suurempi_cropped2.jpg" />
-        <div class="position-absolute" id="palvelutHeaderTextDiv">
+        <div class="position-absolute" id="galleriaHeaderTextDiv">
           <!-- tämän h1 otsikon koko eri kuin tehtävänannossa, etusivu olisi näyttänyt tosi kököltä liian pienen tekstin kanssa, eli otin tietoisen irtioton tehtävänannosta tässä kohtaa. -->
-          <h1 id="palvelutHeaderText">Tutustu valmistuneisiin kohteisiimme</h1>
+          <h1 id="galleriaHeaderText">Tutustu valmistuneisiin kohteisiimme</h1>
         </div>
       </div>
     </div>
@@ -47,46 +60,57 @@
   <div class="container-fluid">
     <!-- Lyhyt kuvaus, fonttikokoa taas muokattu isommaksi kuin tehtävänannossa -->
     <div class="row my-4 justify-content-center">
-      <div id="palvelutHeaderTextSmallDiv">
-        <h3 id="palvelutHeaderTextSmall">Mietitkö vielä miten toteuttaa remonttiunelmasi? Tutustu täällä valmistuneisiin kohteisiimme ja anna inspiraatiosi kukkia.</h3>
+      <div id="galleriaHeaderTextSmallDiv">
+        <h3 id="galleriaHeaderTextSmall">Mietitkö vielä miten toteuttaa remonttiunelmasi? Tutustu täällä valmistuneisiin kohteisiimme ja anna inspiraatiosi kukkia.</h3>
       </div>
     </div>
 
     <!-- ensimmäinen remonttikohderivi-->
     <div class="row p-4 m-4 justify-content-center border-top">
       <!-- rivin sisällä kolme kolumnia, tässä ensimmäinen -->
-      <div class="col-12 col-md-3 m-2">
-        <div class="row justify-content-center"><img class="img-fluid remonttiImg" src="./asssets/pexels-heyho-7005274.jpg"/></div>
+      <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
+        <div class="row justify-content-center galleriaImgDiv">
+          <img class="img-fluid galleriaImg" src="./asssets/pexels-heyho-7005274.jpg"/>
+        </div>
         <div class="row p-2 justify-content-start">
-          <h2 class="palvelutHeader">Vierashuoneen maalaustyö:</h2>
-          <ul class="m-1">
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Kuvaus projektista</li>
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Työn kesto</li>
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Hinta</li>
+          <h2 class="galleriaHeader col-12 m-2">Vierashuoneen maalaustyö:</h2>
+          <ul class="col-12 m-2">
+            <li class="py-2 kuvaus" id="kuvaus1"><i class="bi bi-plus-circle m-1"></i> Kuvaus projektista</li>
+            <p class="kuvaus1" style="display: none;">Vierashuoneeseen maalattiin tehosteseinä sekä suoritettiin kiinteiden kalusteiden maalaustyö.</p>
+            <li class="py-2 kesto" id="kesto1"><i class="bi bi-plus-circle m-1"></i> Työn kesto</li>
+            <p class="kesto1" style="display: none;">2 työpäivää, yksi tekijä.</p>
+            <li class="py-2 hinta" id="hinta1"><i class="bi bi-plus-circle m-1"></i> Hinta</li>
+            <p class="hinta1" style="display: none;">Työn osuus 950 € + materiaalikulut 200€ = 1150 €.</p>
           </ul>
         </div>      
       </div>
       <!-- tässä toinen kolumni -->
-      <div class="col-12 col-md-3 m-2">
-        <div class="row justify-content-center"><img class="img-fluid remonttiImg" src="./asssets/pexels-heyho-6588597.jpg"/></div>
+      <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
+        <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid remonttiImg" src="./asssets/pexels-heyho-6588597.jpg"/></div>
         <div class="row p-2 justify-content-start">
-          <h2 class="palvelutHeader">Olohuoneen maalaustyö:</h2>
-          <ul class="m-1">
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Kuvaus projektista</li>
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Työn kesto</li>
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Hinta</li>
+          <h2 class="galleriaHeader col-12 m-2">Olohuoneen maalaustyö:</h2>
+          <ul class="col-12 m-2">
+            <li class="py-2 kuvaus" id="kuvaus2"><i class="bi bi-plus-circle m-1"></i> Kuvaus projektista</li>
+            <p class="kuvaus2" style="display: none;">Olohuoneeseen toteutettiin osittainen tehosteseinä.</p>
+            <li class="py-2 kesto" id="kesto2"><i class="bi bi-plus-circle m-1"></i> Työn kesto</li>
+            <p class="kesto2" style="display: none;">4 tuntia, yksi tekijä.</p>
+            <li class="py-2 hinta" id="hinta2"><i class="bi bi-plus-circle m-1"></i> Hinta</li>
+            <p class="hinta2" style="display: none;">Työn osuus 250€ + materiaalikulut 80€ = 330 €.</p>
           </ul>
         </div>
       </div>
       <!-- tässä kolmas kolumni -->
-      <div class="col-12 col-md-3 m-2">
-        <div class="row justify-content-center"><img class="img-fluid remonttiImg" src="./asssets/pexels-heyho-7147298.jpg"/></div>
+      <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
+        <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid remonttiImg" src="./asssets/pexels-heyho-7147298.jpg"/></div>
         <div class="row p-2 justify-content-start">
-          <h2 class="palvelutHeader">Keittiön ja ruokailutilan freesaus:</h2>
-          <ul class="m-1">
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Kuvaus projektista</li>
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Työn kesto</li>
-            <li class="py-2"><i class="bi bi-plus-circle"></i> Hinta</li>
+          <h2 class="galleriaHeader col-12 m-2">Keittiön ja ruokailutilan freesaus:</h2>
+          <ul class="col-12 m-2">
+            <li class="py-2 kuvaus" id="kuvaus3"><i class="bi bi-plus-circle m-1"></i> Kuvaus projektista</li>
+            <p class="kuvaus3" style="display: none;">Keittiön ja ruokailutilan ilme raikastettiin maalauksella.</p>
+            <li class="py-2 kesto" id="kesto3"><i class="bi bi-plus-circle m-1"></i> Työn kesto</li>
+            <p class="kesto3" style="display: none;">6 tuntia, kaksi tekijää.</p>
+            <li class="py-2 hinta" id="hinta3"><i class="bi bi-plus-circle m-1"></i> Hinta</li>
+            <p class="hinta3" style="display: none;">Työn osuus 720 € + materiaalikulut 150 € = 870 €.</p>
           </ul>
         </div>   
       </div>
@@ -95,38 +119,47 @@
         <!-- toinen remonttikohderivi-->
         <div class="row p-4 m-4 justify-content-center border-top">
           <!-- ensimmäinen kolumni -->
-          <div class="col-12 col-md-3 m-2">
-            <div class="row justify-content-center"><img class="img-fluid remonttiImg" src="./asssets/pexels-curtis-adams-1694007-15580488.jpg"/></div>
+          <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
+            <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid galleriaImg" src="./asssets/pexels-curtis-adams-1694007-15580488.jpg"/></div>
             <div class="row p-2 justify-content-start">
-              <h2 class="palvelutHeader">Makuuhuoneen tapetointi- ja maalaustyö:</h2>
-              <ul class="m-1">
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Kuvaus projektista</li>
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Työn kesto</li>
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Hinta</li>
+              <h2 class="galleriaHeader col-12 m-2">Makuuhuoneen tapetointi- ja maalaustyö:</h2>
+              <ul class="col-12 m-2">
+                <li class="py-2 kuvaus" id="kuvaus4"><i class="bi bi-plus-circle m-1"></i> Kuvaus projektista</li>
+                <p class="kuvaus4" style="display: none;">Makuuhuoneen vanhan tapetin poisto, tasoitustyöt, uuden tapetin asennus tehosteseinälle ja muiden seinien maalaus.</p>
+                <li class="py-2 kesto" id="kesto4"><i class="bi bi-plus-circle m-1"></i> Työn kesto</li>
+                <p class="kesto4" style="display: none;">2 työpäivää, kaksi tekijää.</p>
+                <li class="py-2 hinta" id="hinta4"><i class="bi bi-plus-circle m-1"></i> Hinta</li>
+                <p class="hinta4" style="display: none;">Työn osuus 1900 € + materiaalikulut 200 € = 2100 €.</p>
               </ul>
             </div>      
           </div>
           <!-- toinen kolumni -->
-          <div class="col-12 col-md-3 m-2">
-            <div class="row justify-content-center"><img class="img-fluid remonttiImg" src="./asssets/pexels-tima-miroshnichenko-6474343.jpg"/></div>
-            <div class="row p-2 justify-content-start">
-              <h2 class="palvelutHeader">Sisäkaton tasoitus- ja maalaustyö:</h2>
-              <ul class="m-1">
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Kuvaus projektista</li>
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Työn kesto</li>
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Hinta</li>
+          <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
+            <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid galleriaImg" src="./asssets/pexels-tima-miroshnichenko-6474343.jpg"/></div>
+            <div class="row p-2 justify-content-start ">
+              <h2 class="galleriaHeader col-12 m-2">Sisäkaton tasoitus- ja maalaustyö:</h2>
+              <ul class="col-12 m-2">
+                <li class="py-2 kuvaus" id="kuvaus5"><i class="bi bi-plus-circle m-1"></i> Kuvaus projektista</li>
+                <p class="kuvaus5" style="display: none;">Omakotitalon (120m2) koko sisätilojen katon tasoitus ja maalaaminen.</p>
+                <li class="py-2 kesto" id="kesto5"><i class="bi bi-plus-circle m-1"></i> Työn kesto</li>
+                <p class="kesto5" style="display: none;">8 tuntia, kaksi tekijää.</p>
+                <li class="py-2 hinta" id="hinta5"><i class="bi bi-plus-circle m-1"></i> Hinta</li>
+                <p class="hinta5" style="display: none;">Työn osuus 950 € + materiaalikulut 200 € = 1150 €.</p>
               </ul>
             </div>
           </div>
           <!-- kolmas kolumni -->
-          <div class="col-12 col-md-3 m-2">
-            <div class="row justify-content-center"><img class="img-fluid remonttiImg" src="./asssets/pexels-heyho-7166567.jpg"/></div>
+          <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
+            <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid galleriaImg" src="./asssets/pexels-heyho-7166567.jpg"/></div>
             <div class="row p-2 justify-content-start">
-              <h2 class="palvelutHeader">Makuuhuoneen maalaustyö:</h2>
-              <ul class="m-1">
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Kuvaus projektista</li>
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Työn kesto</li>
-                <li class="py-2"><i class="bi bi-plus-circle"></i> Hinta</li>
+              <h2 class="galleriaHeader col-12 m-2">Makuuhuoneen maalaustyö:</h2>
+              <ul class="col-12 m-2">
+                <li class="py-2 kuvaus" id="kuvaus6"><i class="bi bi-plus-circle m-1"></i> Kuvaus projektista</li>
+                <p class="kuvaus6" style="display: none;">Makuuhuoneen seinien maalaus uudella värillä.</p>
+                <li class="py-2 kesto" id="kesto6"><i class="bi bi-plus-circle m-1"></i> Työn kesto</li>
+                <p class="kesto6" style="display: none;">6 tuntia, yksi tekijä.</p>
+                <li class="py-2 hinta" id="hinta6"><i class="bi bi-plus-circle m-1"></i> Hinta</li>
+                <p class="hinta6" style="display: none;">Työn osuus 350 € + materiaalikulut 80 € = 430 €.</p>
               </ul>
             </div>   
           </div>
@@ -139,7 +172,7 @@
     <footer class="footer position-absolute" id="footer">
 
       <div class="row p-4 mx-0">
-        <div class="col-lg-4 col-md-12">
+        <div class="col-lg-4 col-md-12 mb-4">
           <h5>Kotkantien maalaus ja tapetointi</h5>
           <div>
             <p>Kotkantie 3</p>
@@ -148,7 +181,7 @@
             <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 mb-4">
           <h5>löydät meidät somesta</h5>
           <ul class="list-unstyled">
             <li class="mb-2">
@@ -186,6 +219,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <script src="./js/galleria.js"></script>
+    <script src="./js/navbar.js"></script>
 </body>
 
 </html>
