--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./css/navbar.css"> 
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,10 +41,13 @@
     <div class="container-fluid position-relative" id="middleContainerDiv">
         <div class="row justify-content-center">
             <div class="position-relative" id="headerImgDiv">
-                <img class="img-fluid mx-auto" id="headerImg" src="./asssets/pexels-ivan-samkov-5798984.jpg" />
-                <div class="position-absolute" id="headerTextDiv">
+                <img class="img-fluid mx-auto" id="headerImg" src="./asssets/pexels-ivan-samkov-5798984_cropped.jpg" />
+                <div class="position-absolute m-3" id="headerTextDiv">
                     <!-- tämän h1 otsikon koko eri kuin tehtävänannossa, etusivu olisi näyttänyt tosi kököltä liian pienen tekstin kanssa, eli otin tietoisen irtioton tehtävänannosta tässä kohtaa. -->
                     <h1 id="headerText">Kotkantien maalaus ja tapetointi</h1>
+                    
+                </div>
+                <div class="position-absolute m-3" id="sloganTextDiv">
                     <h3 id="headerSlogan">Ammattitaidolla, asiakasta kuunnellen</h3>
                 </div>
             </div>
@@ -55,7 +59,7 @@
         <footer class="footer position-absolute" id="footer">
 
             <div class="row p-4">
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 mb-4">
                     <h5>Kotkantien maalaus ja tapetointi</h5>
                     <div>
                         <p>Kotkantie 3</p>
@@ -64,7 +68,7 @@
                         <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 mb-4">
                     <h5>löydät meidät somesta</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2">
