--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -5,31 +5,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/yhteystiedot.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/yhteystiedot.css">
     <title>Yhteystiedot</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row my-4 py-4" id="navbar">
-            <div class="col navLinks"><a  href="index.html">Etusivu</a></div>
-            <div class="col navLinks"><a href="./palvelut.html">Palvelut</a></div>
-            <div class="col navLinks"><a href="./testaus.html">Värien testaus</a></div>
-            <div class="col navLinks"><a href="./galleria.html">Galleria</a></div>
-            <div class="col navLinks"><a href="./yhteystiedot.html">Yhteystiedot</a></div>
+    <!-- tässä navigointipalkki -->
+    <div class="container-fluid position-sticky" id="navbarDiv">
+        <div class="row py-4 justify-content-center " id="navbar">
+            <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
+            <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a>
+            </div>
+            <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./testaus.html">Värien
+                    testaus</a></div>
+            <div class="col-2 my-auto navLinks d-flex justify-content-center"><a href="./galleria.html">Galleria</a>
+            </div>
+            <div class="col-2 my-auto navLinks d-flex justify-content-center"><a
+                    href="./yhteystiedot.html">Yhteystiedot</a></div>
         </div>
 
     </div>
-    <div class="container-fluid">
-        <div class="row py-4">
-            <div class="col-md-6 col-sm-12" id="leftColumn">
-                <h1>OTA YHTEYTTÄ</h1>                
+    </div>
+    <div class="hamburgerDiv container-fluid">
+        <button id="hamburger"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24"
+                stroke-width="2">
+                <path d="M4 6l16 0"></path>
+                <path d="M4 12l16 0"></path>
+                <path d="M4 18l16 0"></path>
+            </svg> </button>
+    </div>
+
+    <!-- tässä banneri -->
+    <div class="container-fluid position-relative" id="middleContainerDiv">
+        <div class="row my-4 justify-content-center">
+            <div class="position-relative" id="yhteysHeaderImgDiv">
+                <img class="img-fluid mx-auto" id="yhteysHeaderImg"
+                    src="./asssets/pexels-polina-tankilevitch-5583096_cropped2.jpg" />
+                <div class="position-absolute" id="yhteysHeaderTextDiv">
+                    <!-- tämän h1 otsikon koko eri kuin tehtävänannossa, etusivu olisi näyttänyt tosi kököltä liian pienen tekstin kanssa, eli otin tietoisen irtioton tehtävänannosta tässä kohtaa. -->
+                    <h1 id="yhteysHeaderText">Ota yhteyttä</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Tässä sivun sisältö -->
+    <div class="container-fluid position-relative">
+        <!-- Lyhyt kuvaus, fonttikokoa taas muokattu isommaksi kuin tehtävänannossa -->
+        <div class="row my-4 justify-content-center">
+            <div id="yhteysHeaderTextSmallDiv">
+                <h3 id="yhteysHeaderTextSmall">Olipa sinulla remonttisuunnitelma jo valmiina tai tarvitset apua aivan alusta asti, ota meihin yhteyttä! Me toteutamme remonttihaaveesi.</h3>
+            </div>
+        </div>
+        <div class="row m-4 py-4 justify-content-center border-top">
+            <div class="col-md-5 col-sm-12 px-4 m-2" id="leftColumn">
+                <!-- Kontaktilomake -->
                 <form id="contactForm">
                     <div class="form-group">
                         <label for="nameInput">Nimi</label>
@@ -45,75 +82,69 @@
                         <textarea type="text" id="textAreaInput" class="form-control" rows="4"
                             placeholder="Viestisi meille"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-info" id="submitFormBtn">Lähetä</button>
+                    <button type="submit" class="btn btn-outline-secondary omaBtn" id="submitFormBtn">Lähetä</button>
                     <button type="reset" class="btn btn-secondary" id="resetFormBtn">Tyhjennä</button>
                 </form>
             </div>
-            <div class="col-md-6 col-sm-12" id="mapDiv">
+            <!-- Kartta -->
+            <div class="col-md-5 col-sm-12 px-4 m-2" id="mapDiv">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1686.0773505864959!2d25.508349977655694!3d65.00146934481734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4681cd5aac2e0dcb%3A0xd0f738d563fe562d!2sKotkantie%203%2C%2090250%20Oulu!5e0!3m2!1sfi!2sfi!4v1730188909564!5m2!1sfi!2sfi"
-                    width="80%" height="80%" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="90%" height="90%" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
+
         <!-- tästä alkaa footer -->
-        <footer class="" >
-            <div class="container-fluid p-4" id="footer">
-                <div class="row">
-                  <div class="col-lg-4 col-md-12">
-                    <h5>Kotkantien maalaus ja tapetointi</h5>
-                    <div>
-                        <p>Kotkantie 3</p>
-                        <p>90100 Oulu</p>
-                        <div><i class="bi bi-telephone"></i> 044 999 888 99</div>
-                        <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
+        <div class="container-fluid px-0 " id="footerContainer">
+            <footer class="footer position-absolute" id="footer">
+
+                <div class="row p-4">
+                    <div class="col-lg-4 col-md-12 mb-4">
+                        <h5>Kotkantien maalaus ja tapetointi</h5>
+                        <div>
+                            <p>Kotkantie 3</p>
+                            <p>90100 Oulu</p>
+                            <div><i class="bi bi-telephone"></i> 044 999 888 99</div>
+                            <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
+                        </div>
                     </div>
-                    <!-- <p>
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                      molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-                      voluptatem veniam, est atque cumque eum delectus sint!
-                    </p> -->
-                  </div>
-                  <div class="col-lg-4 col-md-6">
-                    <h5>löydät meidät somesta</h5>
-                    <ul class="list-unstyled">
-                      <li class="mb-2">
-                        <a href="" style="color: #4f4f4f;"><i class="bi bi-instagram"></i> Instagram</a>
-                      </li>
-                      <li class="mb-2">
-                        <a href="" style="color: #4f4f4f;"><i class="bi bi-youtube"></i> YouTube</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-lg-4 col-md-6 mb-4">
-                    <h5>olemme avoinna</h5>
-                    <table class="table">
-                      <tbody>
-                        <tr>
-                          <td>Ma - Pe:</td>
-                          <td>9:00 - 18:00</td>
-                        </tr>
-                        <tr>
-                          <td>La - Su:</td>
-                          <td>Sopimuksen mukaan</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <h5>löydät meidät somesta</h5>
+                        <ul class="list-unstyled">
+                            <li class="mb-2">
+                                <a href=""><i class="bi bi-instagram"></i> Instagram</a>
+                            </li>
+                            <li class="mb-2">
+                                <a href=""><i class="bi bi-youtube"></i> YouTube</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <h5>olemme avoinna</h5>
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <td>Ma - Pe:</td>
+                                    <td>9:00 - 18:00</td>
+                                </tr>
+                                <tr>
+                                    <td>La - Su:</td>
+                                    <td>Sopimuksen mukaan</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-              </div>
-              <!-- <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                © 2020 Copyright:
-                <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-              </div> -->
-        </footer>
-    </div>
+            </footer>
+        </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
-    <script src="./js/yhteystiedot.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+        <script src="./js/yhteystiedot.js"></script>
+        <script src="./js/navbar.js"></script>
 </body>
 
 </html>
