hampparivalikko toimii palvelut-sivulla

--- a/palvelut.html
+++ b/palvelut.html
@@ -30,16 +30,33 @@
 
       </div>
     </div>
-  <div class="hamburgerDiv container-fluid">
-      <button id="hamburger">
+    <!-- tässä hampurilaisnappula -->
+  <div class="hamburgerDiv container-fluid justify-content-center">
+    <div class="row py-4 justify-content-center ">
+      <div class="col-12 my-auto navLinks d-flex justify-content-center" id="hamburgerButton">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M4 6l16 0"></path> <path d="M4 12l16 0"></path> <path d="M4 18l16 0"></path> </svg> 
-      </button>
-      
+      </div>
+    </div>
+
+      <!-- Hampurilaisen avattu navigointi -->
+      <div class="row py-4 justify-content-center border-bottom" id="hamburgerNavbar">
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a>
+        </div>
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./testaus.html">Värien
+                testaus</a></div>
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./galleria.html">Galleria</a>
+        </div>
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a
+                href="./yhteystiedot.html">Yhteystiedot</a></div>
+        </div>
+
+    </div>
   </div>
 
   <!-- sivun banneri, h1 fonttikoko tietoisesti laitettu isommaksi kuin tehtävänannossa -->
   <div class="container-fluid position-relative" id="middleContainerDiv">
-    <div class="row my-4 justify-content-center">
+    <div class="row my-2 justify-content-center">
       <div class="position-relative" id="palvelutHeaderImgDiv">
         <img class="img-fluid mx-auto" id="palvelutHeaderImg"
           src="./asssets/pexels-neverlera-10194600_tight_cropped.jpg" />
