hampurilaisnavigointi toimii palveluissa

--- a/galleria.html
+++ b/galleria.html
@@ -47,7 +47,7 @@
     <div class="row my-4 justify-content-center">
       <div class="position-relative" id="galleriaHeaderImgDiv">
         <img class="img-fluid mx-auto" id="galleriaHeaderImg"
-          src="./asssets/pexels-pixabay-260046_suurempi_cropped2.jpg" />
+          src="./assets/pexels-pixabay-260046_suurempi_cropped2.jpg" />
         <div class="position-absolute" id="galleriaHeaderTextDiv">
           <!-- tämän h1 otsikon koko eri kuin tehtävänannossa, etusivu olisi näyttänyt tosi kököltä liian pienen tekstin kanssa, eli otin tietoisen irtioton tehtävänannosta tässä kohtaa. -->
           <h1 id="galleriaHeaderText">Tutustu valmistuneisiin kohteisiimme</h1>
@@ -70,7 +70,7 @@
       <!-- rivin sisällä kolme kolumnia, tässä ensimmäinen -->
       <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
         <div class="row justify-content-center galleriaImgDiv">
-          <img class="img-fluid galleriaImg" src="./asssets/pexels-heyho-7005274.jpg"/>
+          <img class="img-fluid galleriaImg" src="./assets/pexels-heyho-7005274.jpg"/>
         </div>
         <div class="row p-2 justify-content-start">
           <h2 class="galleriaHeader col-12 m-2">Vierashuoneen maalaustyö:</h2>
@@ -86,7 +86,9 @@
       </div>
       <!-- tässä toinen kolumni -->
       <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
-        <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid remonttiImg" src="./asssets/pexels-heyho-6588597.jpg"/></div>
+        <div class="row justify-content-center galleriaImgDiv">
+          <img class="img-fluid galleriaImg" src="./assets/pexels-heyho-6588597.jpg"/>
+        </div>
         <div class="row p-2 justify-content-start">
           <h2 class="galleriaHeader col-12 m-2">Olohuoneen maalaustyö:</h2>
           <ul class="col-12 m-2">
@@ -101,7 +103,9 @@
       </div>
       <!-- tässä kolmas kolumni -->
       <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
-        <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid remonttiImg" src="./asssets/pexels-heyho-7147298.jpg"/></div>
+        <div class="row justify-content-center galleriaImgDiv">
+          <img class="img-fluid galleriaImg" src="./assets/pexels-heyho-7147298.jpg"/>
+        </div>
         <div class="row p-2 justify-content-start">
           <h2 class="galleriaHeader col-12 m-2">Keittiön ja ruokailutilan freesaus:</h2>
           <ul class="col-12 m-2">
@@ -120,7 +124,9 @@
         <div class="row p-4 m-4 justify-content-center border-top">
           <!-- ensimmäinen kolumni -->
           <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
-            <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid galleriaImg" src="./asssets/pexels-curtis-adams-1694007-15580488.jpg"/></div>
+            <div class="row justify-content-center galleriaImgDiv">
+              <img class="img-fluid galleriaImg" src="./assets/pexels-curtis-adams-1694007-15580488.jpg"/>
+            </div>
             <div class="row p-2 justify-content-start">
               <h2 class="galleriaHeader col-12 m-2">Makuuhuoneen tapetointi- ja maalaustyö:</h2>
               <ul class="col-12 m-2">
@@ -135,7 +141,9 @@
           </div>
           <!-- toinen kolumni -->
           <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
-            <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid galleriaImg" src="./asssets/pexels-tima-miroshnichenko-6474343.jpg"/></div>
+            <div class="row justify-content-center galleriaImgDiv">
+              <img class="img-fluid galleriaImg" src="./assets/pexels-tima-miroshnichenko-6474343.jpg"/>
+            </div>
             <div class="row p-2 justify-content-start ">
               <h2 class="galleriaHeader col-12 m-2">Sisäkaton tasoitus- ja maalaustyö:</h2>
               <ul class="col-12 m-2">
@@ -150,7 +158,9 @@
           </div>
           <!-- kolmas kolumni -->
           <div class="col-12 col-md-3 m-2 d-flex flex-column align-items-center">
-            <div class="row justify-content-center galleriaImgDiv"><img class="img-fluid galleriaImg" src="./asssets/pexels-heyho-7166567.jpg"/></div>
+            <div class="row justify-content-center galleriaImgDiv">
+              <img class="img-fluid galleriaImg" src="./assets/pexels-heyho-7166567.jpg"/>
+            </div>
             <div class="row p-2 justify-content-start">
               <h2 class="galleriaHeader col-12 m-2">Makuuhuoneen maalaustyö:</h2>
               <ul class="col-12 m-2">
