--- a/palvelut.html
+++ b/palvelut.html
@@ -31,15 +31,15 @@
       </div>
     </div>
     <!-- tässä hampurilaisnappula -->
-  <div class="hamburgerDiv container-fluid justify-content-center">
-    <div class="row py-4 justify-content-center ">
-      <div class="col-12 my-auto navLinks d-flex justify-content-center" id="hamburgerButton">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M4 6l16 0"></path> <path d="M4 12l16 0"></path> <path d="M4 18l16 0"></path> </svg> 
+  <div class="hamburgerDiv py-2 container-fluid justify-content-center border-bottom">
+    <div class="row py-2 justify-content-center align-items-center text-align-center">
+      <div class="col-2 my-auto navLinks d-flex justify-content-center" id="hamburgerButton">
+        <img id="hamburgerSVG" src="./assets/hamburger-lg-svgrepo-com.svg" alt="Hamburger navigation icon" style="height: 40px; width: 40px;"/>
       </div>
     </div>
 
       <!-- Hampurilaisen avattu navigointi -->
-      <div class="row py-4 justify-content-center border-bottom" id="hamburgerNavbar">
+      <div class="row py-4 justify-content-center" id="hamburgerNavbar">
         <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
         <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a>
         </div>
@@ -59,7 +59,7 @@
     <div class="row my-2 justify-content-center">
       <div class="position-relative" id="palvelutHeaderImgDiv">
         <img class="img-fluid mx-auto" id="palvelutHeaderImg"
-          src="./asssets/pexels-neverlera-10194600_tight_cropped.jpg" />
+          src="./assets/pexels-neverlera-10194600_tight_cropped.jpg" />
         <div class="position-absolute" id="palvelutHeaderTextDiv">
           <!-- tämän h1 otsikon koko eri kuin tehtävänannossa, etusivu olisi näyttänyt tosi kököltä liian pienen tekstin kanssa, eli otin tietoisen irtioton tehtävänannosta tässä kohtaa. -->
           <h1 id="palvelutHeaderText">Maalauksen ja tapetoinnin ammattilaisilta</h1>
@@ -78,8 +78,8 @@
       </div>
     </div>
 
-    <!-- toisella rivillä maalauspalvelutiedot ja kuva -->
-    <div class="row p-4 justify-content-center">
+    <!-- tällä rivillä tiedot maalauspalveluista ja siihen liittyvä kuva -->
+    <div class="row p-2 justify-content-center">
       <div class="col-12 col-sm-4 py-5 d-flex align-items-center justify-content-center border-top">
         <div class="palveluTexttDiv">
           <h2 class="palvelutHeader">Maalauspalvelumme kattavat:</h2>
@@ -95,13 +95,14 @@
         </div>
       </div>
       <div class="col-12 col-sm-4 py-5 border-top palvelutImgDiv d-flex justify-content-center" id="">
-        <img class="img-fluid palvelutImg " id="" src="./asssets/pexels-kseniachernaya-5691597.jpg" />
+        <img class="img-fluid palvelutImg " id="" src="./assets/pexels-kseniachernaya-5691597.jpg" />
       </div>
     </div>
 
-    <div class="row p-4 justify-content-center">
+    <!-- tällä rivillä tiedot tapetointipalveluista ja siihen liittyvä kuva -->
+    <div class="row p-2 justify-content-center">
       <div class="col-12 col-sm-4 py-5 border-top palvelutImgDiv d-flex justify-content-center" id="">
-        <img class="img-fluid palvelutImg" id="" src="./asssets/pexels-curt-hubner-39375428-20806624.jpg" />
+        <img class="img-fluid palvelutImg" id="" src="./assets/pexels-curt-hubner-39375428-20806624.jpg" />
       </div>
       <div class="col-12 col-sm-4 py-5 d-flex align-items-center justify-content-center border-top">
         <div class="palveluTexttDiv">
